# Action-RPG-Driving-Game

./: .editorconfig  .gitignore  404.html  Action RPG Driving Game.csproj  Action RPG Driving Game.sln  DemoScene.tscn  README.md  Sierra Verde.csproj  Sierra Verde.csproj.old  Sierra Verde.sln  addons.jsonc  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  icon.svg.import  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  project.godot  pyproject.toml  sitemap.xml  traudio_db.tres
.config/: dotnet-tools.json
.github/workflows/: build.yml
addons/: .editorconfig
addons-legend/: index.html
addons/gdUnit4/: plugin.gd.uid
addons/ggs/: plugin.gd.uid
addons/orchestrator/: orchestrator.gdextension.uid
addons/scene_manager/: Dissolve2d.gdshader.uid  NodeFlagsInspectorPlugin.gd.uid  SceneManager.gd.uid  SceneManagerConstants.gd.uid  SceneManagerPlugin.gd.uid  SingletonCheckProperty.gd.uid  (+1 more)
blog/: index.html
docs/: addons-legend.md  file-system-layout.md  index.md  mkdocs.yml  pyproject.toml
file-system-layout/: index.html
ggs/: plugin_settings.tres
globals/: dialog_stories_database.tscn  smoke_test.gd.uid
images/: 10.55 PM Blockbench 2487.png.import  10.56 PM material_maker 2488.jpg.import  10.58 PM vivaldi 2489.png.import
modules/: README.md
nodes/: router_node.gd  router_node.gd.uid
scenes/: foo.gd.uid  rosewood_county.tscn
scripts/: install-addons.nu  install_addons.py
search/: search_index.json
stylesheets/: index.css
tools/: uid_locator.gd  uid_locator.gd.uid
views/: theme.tres
(+3641 files in other folders)
