[project]
name = "a"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["docs", "scripts/tools/*"]

[dependency-groups]
dev = [
    "copier>=9.10.2",
    "mkdocs-material[imaging]>=9.6.21",
    "mkdocs-rss-plugin>=1.17.3",
    "rich>=14.1.0",
    "ruff>=0.13.0",
]
